1998-07-25  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* gnomine.desktop: Added Portuguese translation.

1998-06-24  Raja R Harinath  <harinath@cs.umn.edu>

	* gnomine.c (setup_game): Use new API for GtkSpinButton.

1998-05-29 Kjartan Maraas <kmaraas@fib.hl.no>

	* gnomine.c: Fixed scores getting better as time goes.
		     No more "waiting for a new hiscore" :-)
	
1998-05-24 Kjartan Maraas <kmaraas@fib.hl.no>

	* Makefile.am: New scorefiles gnomine.[Tiny,Medium,Biiiig].scores
	* gnomine.c:   Made scores work in all modes.
	
1998-05-17 Timo Sirainen <a@sicom.fi>

	* minefield.c: Marking two mines fast resulted as doubleclick and
	               didn't work right
	* minefield.c: Changed multi press behaviour so that it always
	               displays what squares are about to be pressed
	* minefield.c: Mine is now marked directly when button is pressed down
	* minefield.c: You can't win anymore by marking mines to all squares.
	               Also, you can win now when there's only left same
	               amount of unopened and unmarked mines like you don't
	               really have to mark any mines to win :)
	* minefield.c: The previous fix "multi show didn't work if pressed
	               over marked mine" wasn't actually good idea, removed..
	* minefield.c: Colors of mines 4-8 changed
	* minefield.c: Opened mines have now thin borders, I think this is
	               somewhat clearer :) and bigger fonts can be used.
	* minefield.c: Square presses follow now mouse.
	* gnomine.c: Because of above, I removed the "off release" option
	             since it didn't have anything to do anymore..
	* gnomine.c: Minefield sizes changed to same as other minesweepers
	             have

1998-05-10 Timo Sirainen <a@sicom.fi>

        * minefield.c: multi show didn't work if pressed over marked mine
        * minefield.c: left+right button works as multi show (like middle) 
        * gnomine.c: New option to let mouse button be released off the