@@ -1,3 +1,7 @@
+1998-09-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gnomine.c: Added shortcut support.
+
 1998-07-25  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>
 
 	* gnomine.desktop: Added Portuguese translation.
